better tooltip visibility, search z-index fix & logo tint

--- a/app/stylus/layout.styl
+++ b/app/stylus/layout.styl
@@ -92,6 +92,7 @@ body.waiting
     outline none
     text-shadow 0 0 1px #ccc
     color #555
+    filter hue-rotate(sprite_hue)
     background-image url(cache-url + '/images/pb_icon_logo_sm.png')
     background-repeat no-repeat
     padding-left 35px
@@ -114,6 +115,7 @@ body.waiting
   &:before
     display none
   a
+    filter none
     display inline-block
     background-image none
     text-indent -9999px
@@ -265,7 +267,7 @@ header
       top 10px
       left 234px
       position absolute 
-      z-index 8
+      z-index 10
       .query
         width 440px
         padding-top grid
